@@ -6347,3 +6347,6 @@ PACKAGE: 2.2.99.2
 
 2007-03-30 tdb
  * quote command line arguments in invocation, using quotemeta
+
+2007-04-11 cjg
+ * Bail out of an unpack if there is no mimetype, avoiding an undef warning.
